--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <title>React App</title>
+
+    <title>Fusion Asian</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
